--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "build": "run-s \"build:*\"",
     "dev:remix": "remix watch",
+    "dev:css": "npm run generate:css -- --watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "dev": "remix build && run-p \"dev:*\"",
+    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
@@ -22,8 +26,11 @@
     "@remix-run/eslint-config": "^1.6.5",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "wrangler": "beta"
   },
