--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "dev:css": "npm run generate:css -- --watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "dev": "remix build && run-p \"dev:*\"",
+    "start": "cross-env NODE_ENV=production npm run dev:wrangler",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
-    "start": "cross-env NODE_ENV=production npm run dev:wrangler"
+    "format": "prettier --write .",
+    "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix"
   },
+  "prettier": {},
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build"
+  ],
   "dependencies": {
     "@remix-run/cloudflare": "^1.6.5",
     "@remix-run/cloudflare-pages": "^1.6.5",
@@ -28,8 +36,11 @@
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "wrangler": "beta"
