--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "format": "prettier --write .",
-    "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix"
+    "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -25,24 +28,36 @@
     "@remix-run/cloudflare-pages": "^1.6.5",
     "@remix-run/react": "^1.6.5",
     "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
     "@remix-run/dev": "^1.6.5",
     "@remix-run/eslint-config": "^1.6.5",
+    "@remix-run/node": "^1.6.5",
+    "@testing-library/dom": "^8.16.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "@vitejs/plugin-react": "^2.0.0",
+    "@vitest/ui": "^0.18.1",
     "autoprefixer": "^10.4.7",
+    "c8": "^7.12.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "happy-dom": "^6.0.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
+    "vite": "^3.0.2",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "^0.18.1",
     "wrangler": "beta"
   },
   "engines": {
