setup tailwindcss and custom fonts

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
     "build": "run-s \"build:*\"",
-    "dev:remix": "remix watch",
     "dev:css": "npm run generate:css -- --watch",
+    "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "remix build && run-p \"dev:*\"",
+    "dev": "npm run build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "format": "prettier --write .",
