--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "types": ["@cloudflare/workers-types", "vitest/globals"],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
