--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "text.junseinagao.com",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
+    "@types/marked": "^4.0.3",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "@vitejs/plugin-react": "^2.0.0",
@@ -55,6 +57,7 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "happy-dom": "^6.0.4",
+    "marked": "^4.0.18",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
