トップページをほとんど完成させました。

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "dev": "npm run build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
-    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
+    "generate:css": "tailwindcss -i ./app/styles/global.css -o ./app/styles/tailwind.css",
     "format": "prettier --write .",
     "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix",
     "test": "vitest",
@@ -30,7 +30,9 @@
     "@remix-run/cloudflare": "^1.6.5",
     "@remix-run/cloudflare-pages": "^1.6.5",
     "@remix-run/react": "^1.6.5",
+    "budoux": "^0.1.2",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.4",
     "mdx-bundler": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
