--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "sideEffects": false,
   "scripts": {
     "build:markdown": "node build-content.js",
-    "build:css": "npm run generate:css -- --minify",
+    "build:css": "npm run generate:tailwind -- --minify",
     "build:remix": "remix build",
     "build": "run-s \"build:*\"",
     "dev:markdown": "node build-content.js --watch",
-    "dev:css": "npm run generate:css -- --watch",
+    "dev:css": "npm run generate:tailwind -- --watch",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "dev": "npm run build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
-    "generate:css": "tailwindcss -i ./app/styles/global.css -o ./app/styles/tailwind.css",
+    "generate:tailwind": "tailwindcss -i ./app/styles/tailwind.css -o ./app/styles/_tailwind.css",
     "format": "prettier --write .",
     "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix",
     "test": "vitest",
@@ -27,12 +27,14 @@
     "/public/build"
   ],
   "dependencies": {
+    "@primer/css": "^20.4.1",
     "@remix-run/cloudflare": "^1.6.5",
     "@remix-run/cloudflare-pages": "^1.6.5",
     "@remix-run/react": "^1.6.5",
     "budoux": "^0.1.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.4",
+    "markdown-splendor": "^1.0.1",
     "mdx-bundler": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
