--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "budoux": "^0.1.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.4",
+    "highlight.js": "^11.6.0",
     "markdown-splendor": "^1.0.1",
     "mdx-bundler": "^9.0.1",
     "react": "^18.2.0",
@@ -60,12 +61,15 @@
     "esbuild": "^0.14.51",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mdx": "^2.0.2",
     "happy-dom": "^6.0.4",
     "marked": "^4.0.18",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
+    "rehype-highlight": "^5.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-mdx-images": "^2.0.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
