[WIP] zennのrssを読み込む機能を追加。型未解決

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "mdx-bundler": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-utils": "^3.3.0"
+    "remix-utils": "^3.3.0",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
