--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remix-run/cloudflare": "^1.6.5",
     "@remix-run/cloudflare-pages": "^1.6.5",
     "@remix-run/react": "^1.6.5",
+    "@tanem/react-nprogress": "^5.0.10",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.4",
     "highlight.js": "^11.6.0",
