--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
+    "@types/html-to-text": "^8.1.0",
     "@types/marked": "^4.0.3",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
@@ -64,6 +65,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mdx": "^2.0.2",
     "happy-dom": "^6.0.4",
+    "html-to-text": "^8.2.1",
     "marked": "^4.0.18",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
