--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "vite": "^3.0.2",
     "vite-tsconfig-paths": "^3.5.0",
     "vitest": "^0.18.1",
-    "wrangler": "beta"
+    "wrangler": "^2.0.25"
   },
   "engines": {
     "node": ">=14"
