✨ to pnpm from npm

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "sideEffects": false,
   "scripts": {
     "build:markdown": "node build-content.js",
-    "build:css": "npm run generate:tailwind -- --minify",
+    "build:css": "pnpm run generate:tailwind -- --minify",
     "build:remix": "remix build",
     "build": "run-s \"build:*\"",
     "dev:markdown": "node build-content.js --watch",
-    "dev:css": "npm run generate:tailwind -- --watch",
+    "dev:css": "pnpm run generate:tailwind -- --watch",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "npm run build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production npm run dev:wrangler",
+    "dev": "pnpm run build && run-p \"dev:*\"",
+    "start": "cross-env NODE_ENV=production pnpm run dev:wrangler",
     "generate:tailwind": "tailwindcss -i ./app/styles/tailwind.css -o ./app/styles/_tailwind.css",
     "format": "prettier --write .",
     "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix",
