--- a/package.json
+++ b/package.json
@@ -4,84 +4,81 @@
   "sideEffects": false,
   "scripts": {
     "build:markdown": "node build-content.js",
-    "build:css": "pnpm run generate:tailwind -- --minify",
     "build:remix": "remix build",
     "build": "run-s \"build:*\"",
     "dev:markdown": "node build-content.js --watch",
-    "dev:css": "pnpm run generate:tailwind -- --watch",
-    "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "pnpm run build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production pnpm run dev:wrangler",
-    "generate:tailwind": "tailwindcss -i ./app/styles/tailwind.css -o ./app/styles/_tailwind.css",
+    "dev:remix": "remix dev --manual -c \"npm run start\"",
+    "dev": "run-p \"dev:*\"",
+    "start": "pnpm build && pnpm run dev:wrangler",
+    "start:wrangler": "wrangler pages dev ./public",
     "format": "prettier --write .",
     "lint": "eslint ./app/**/*.{js,jsx,ts,tsx} --no-error-on-unmatched-pattern --fix",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage"
   },
-  "prettier": {},
   "eslintIgnore": [
     "/node_modules",
     "/build",
     "/public/build"
   ],
   "dependencies": {
-    "@primer/css": "^20.4.1",
-    "@remix-run/cloudflare": "^1.6.7",
-    "@remix-run/cloudflare-pages": "^1.6.7",
-    "@remix-run/react": "^1.6.7",
-    "@tanem/react-nprogress": "^5.0.10",
+    "@primer/css": "^21.1.1",
+    "@remix-run/cloudflare": "^2.6.0",
+    "@remix-run/cloudflare-pages": "^2.6.0",
+    "@remix-run/react": "^2.6.0",
+    "@tanem/react-nprogress": "^5.0.51",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.4",
-    "highlight.js": "^11.6.0",
+    "dayjs": "^1.11.10",
+    "highlight.js": "^11.9.0",
+    "isbot": "^4.4.0",
     "markdown-splendor": "^1.0.1",
-    "mdx-bundler": "^9.0.1",
+    "mdx-bundler": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-utils": "^3.3.0",
-    "rss-parser": "^3.12.0"
+    "remix-utils": "^7.5.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.14.1",
-    "@remix-run/dev": "^1.6.7",
-    "@remix-run/eslint-config": "^1.6.7",
-    "@remix-run/node": "^1.6.7",
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/html-to-text": "^8.1.0",
-    "@types/marked": "^4.0.3",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "@vitest/ui": "^0.21.1",
-    "autoprefixer": "^10.4.8",
-    "c8": "^7.12.0",
-    "chokidar": "^3.5.3",
-    "esbuild": "^0.14.51",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-mdx": "^2.0.2",
-    "happy-dom": "^6.0.4",
-    "html-to-text": "^8.2.1",
-    "marked": "^4.0.18",
+    "@cloudflare/workers-types": "^4.20240208.0",
+    "@remix-run/dev": "^2.6.0",
+    "@remix-run/eslint-config": "^2.6.0",
+    "@remix-run/node": "^2.6.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/html-to-text": "^9.0.4",
+    "@types/marked": "^6.0.0",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.2.2",
+    "autoprefixer": "^10.4.17",
+    "c8": "^9.1.0",
+    "chokidar": "^3.6.0",
+    "esbuild": "^0.20.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.1.5",
+    "happy-dom": "^13.3.8",
+    "html-to-text": "^9.0.5",
+    "marked": "^12.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "rehype-highlight": "^5.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-mdx-images": "^2.0.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.5",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.21.1",
-    "wrangler": "^2.0.25"
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-mdx-images": "^3.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.1",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.2",
+    "wrangler": "^3.28.1"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
