--- a/package.json
+++ b/package.json
@@ -9,11 +9,30 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.1.0",
     "@astrojs/mdx": "^4.0.2",
+    "@astrojs/react": "^4.1.0",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.3",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "astro": "^5.0.5",
-    "@astrojs/check": "^0.9.4",
+    "dayjs": "^1.11.13",
+    "fontfaceobserver": "^2.3.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
+    "rss-parser": "^3.13.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241205.0",
+    "@types/fontfaceobserver": "^2.1.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "wrangler": "^3.95.0"
   }
 }
