--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "text-junseinagao-com",
   "type": "module",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "wrangler pages dev ./dist",
+    "astro": "astro",
+    "wrangler": "wrangler",
+    "prepreview": "pnpm build"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
