Try generate post's OG

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
+    "@cloudflare/pages-plugin-vercel-og": "^0.1.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.1",
