--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
+    "remove-markdown": "^0.6.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   },
