--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@cloudflare/pages-plugin-vercel-og": "^0.1.2",
+    "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.8",
     "dayjs": "^1.11.13",
     "fast-xml-parser": "^4.5.3",
@@ -26,7 +27,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "remove-markdown": "^0.6.2",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
