--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@cloudflare/pages-plugin-vercel-og": "^0.1.2",
+    "@extractus/feed-extractor": "^7.1.7",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-table": "^8.21.3",
     "astro": "^5.15.8",
     "dayjs": "^1.11.13",
-    "fast-xml-parser": "^4.5.3",
     "fontfaceobserver": "^2.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
