--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro": "^5.15.8",
     "dayjs": "^1.11.13",
     "fontfaceobserver": "^2.3.0",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "remove-markdown": "^0.6.2",
